--- a/index.html
+++ b/index.html
@@ -24,30 +24,19 @@
 
       body {
         font-family: monospace;
-        background: #5865f2;
-      }
-
-      /*===== Reusable classes =====*/
-      .container {
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-
-      .flex {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
+        background: #add5fa;
       }
 
       /*===== Global =====*/
       .window {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         width: 600px;
-        margin: 75px auto;
-        background: #2c3e50;
         height: 350px;
         border-radius: 5px;
+        background: #2c3e50;
         box-shadow: 10px 10px 10px #252525;
       }
 
@@ -86,7 +75,7 @@
         width: 100%;
         height: 300px;
         border-radius: 0 0 5px 5px;
-        padding: 0.5rem;
+        padding: 1rem;
       }
 
       .window-content span {
@@ -100,23 +89,19 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="flex">
-        <div class="window">
-          <div class="window-header">
-            <div class="btn"></div>
-            <div class="btn"></div>
-            <div class="btn"></div>
-          </div>
-          <div class="window-content">
-            <span>while(alive) {</span><br />
-            <span>&nbsp;&nbsp;&nbsp;eat();</span><br />
-            <span>&nbsp;&nbsp;&nbsp;sleep();</span><br />
-            <span>&nbsp;&nbsp;&nbsp;code();</span><br />
-            <span class="content-change"></span><br />
-            <span>}</span>
-          </div>
-        </div>
+    <div class="window">
+      <div class="window-header">
+        <div class="btn"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
+      </div>
+      <div class="window-content">
+        <span>while(alive) {</span><br />
+        <span>&nbsp;&nbsp;&nbsp;eat();</span><br />
+        <span>&nbsp;&nbsp;&nbsp;sleep();</span><br />
+        <span>&nbsp;&nbsp;&nbsp;code();</span><br />
+        <span class="content-change"></span><br />
+        <span>}</span>
       </div>
     </div>
 
