--- a/index.html
+++ b/index.html
@@ -5,88 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Wallpaper</title>
-
-    <style>
-      /*===== Resets =====*/
-      * {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-      }
-
-      ul {
-        list-style: none;
-      }
-
-      a {
-        text-decoration: none;
-      }
-
-      body {
-        font-family: monospace;
-        background: #add5fa;
-      }
-
-      /*===== Global =====*/
-      .window {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 600px;
-        height: 350px;
-        border-radius: 5px;
-        background: #2c3e50;
-        box-shadow: 10px 10px 10px #252525;
-      }
-
-      .window-header {
-        width: 100%;
-        height: 50px;
-        background: #34495e;
-        border-radius: 5px 5px 0 0;
-        padding: 0.5rem;
-      }
-
-      /*===== Buttons =====*/
-      .btn {
-        width: 15px;
-        height: 15px;
-        border-radius: 50%;
-        float: right;
-        margin: 0.8rem 0.25rem;
-        border: none;
-      }
-
-      .btn:nth-child(1) {
-        background: #2ecc71;
-      }
-
-      .btn:nth-child(2) {
-        background: #f1c40f;
-      }
-
-      .btn:nth-child(3) {
-        background: #e74c3c;
-      }
-
-      /*===== Window content =====*/
-      .window-content {
-        width: 100%;
-        height: 300px;
-        border-radius: 0 0 5px 5px;
-        padding: 1rem;
-      }
-
-      .window-content span {
-        color: #ffffff;
-        font-size: 1.5rem;
-      }
-
-      .function-name {
-        color: gold !important;
-      }
-    </style>
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <div class="window">
@@ -106,27 +25,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-
-    <script>
-      const typed = new Typed(".content-change", {
-        strings: [
-          "<span class='function-name'>&nbsp;&nbsp;&nbsp;repeat();</span>",
-          "<span class='function-name'>&nbsp;&nbsp;&nbsp;fuck();</span>",
-          "<span class='function-name'>&nbsp;&nbsp;&nbsp;beProductive();</span>",
-          "<span class='function-name'>&nbsp;&nbsp;&nbsp;doLiterallyAnything();</span>",
-        ],
-        typeSpeed: 75, // Speed to type each word
-        startDelay: 300, // Speed delay to start the animation. 0 = no delay
-        backSpeed: 75, // Speed to clear the text
-        smartBackspace: true, // Delete only the words that are new in a text string.
-        shuffle: false, // Alter the order in which you write the words.
-        backDelay: 1500, // Timeout after finish typing a word.
-        loop: true,
-        loopCount: false, // Times to loop. false = infinite
-        showCursor: true, // Show cursor as a blinking line
-        cursorChar: "|", // Character for the cursor
-        contentType: "html", // 'html' or 'null' for text without format
-      });
-    </script>
+    <script src="assets/js/configuration-typed.js"></script>
   </body>
 </html>
