--- a/index.html
+++ b/index.html
@@ -4,23 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Wallpaper</title>
+    <title>Wallpaper Code</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <div class="window">
+    <span class="window">
       <div class="window-header">
         <div class="btn"></div>
         <div class="btn"></div>
         <div class="btn"></div>
       </div>
       <div class="window-content">
-        <span>while(alive) {</span><br />
-        <span>&nbsp;&nbsp;&nbsp;eat();</span><br />
-        <span>&nbsp;&nbsp;&nbsp;sleep();</span><br />
-        <span>&nbsp;&nbsp;&nbsp;code();</span><br />
-        <span class="content-change"></span><br />
-        <span>}</span>
+        <div>
+          <span class="main-color">public class</span>
+          <span class="reserved-color">Main</span>
+           {
+        </div>
+
+        <div>&nbsp;&nbsp;
+          <span class="main-color">public static void</span>
+          <span class="function-color">main</span>(<span class="reserved-color">String</span>[]
+          <span class="reserved-second-color">args</span>)
+        </div>
+
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;
+          <span class="main-color">while</span>(<span class="main-color">alive</span>)
+          {
+        </div>
+
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <span class="function-color">eat</span>();
+        </div>
+
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <span class="function-color">sleep</span>();
+        </div>
+
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <span class="function-color">code</span>();
+        </div>
+
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <span class="typed function-typing-color"></span>();
+        </div>
+
+        <div id="content-change">
+          <span>repeat</span>
+          <span>fuck</span>
+          <span>doLiterallyAnything</span>
+          <span>beProductive</span>
+        </div>
+
+        <div>&nbsp;&nbsp;&nbsp;&nbsp;}</div>
+
+        <div>&nbsp;&nbsp;}</div>
+
+        <div>}</div>
       </div>
     </div>
 
